# wepapp-fnmedia-archive

./: .gitignore  README.md
.cursor/rules/: frontend-structure.mdc
backend/: pyproject.toml
backend/doculistapp/: apps.py  models.py  urls.py  views.py
backend/doculistapp/migrations/: 0001_initial.py
backend/searchengine/: settings.py  urls.py
frontend/: .gitignore  README.md  index.html  vite.config.ts
frontend/src/components/: ContentArea.tsx  DocumentViewer.tsx  Header.tsx  SearchResults.tsx  Sidebar.tsx
frontend/src/pages/: Index.tsx
frontend/src/types/: document.ts
